[gd_scene load_steps=6 format=2]

[ext_resource path="res://Images/mainsprite/Tile00.png" type="Texture" id=1]
[ext_resource path="res://Script's/move.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1.33334, 7 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1.66667, 7 )

[node name="Caixa" type="Node2D"]
scale = Vector2( 1.5, 1.5 )

[node name="MovimentoBloco" type="KinematicBody2D" parent="."]
position = Vector2( 375, 329 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovimentoBloco"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="MovimentoBloco"]
position = Vector2( 0, 9.53674e-07 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 32, 32, 16, 16 )
region_filter_clip = true

[node name="Area2D" type="Area2D" parent="MovimentoBloco" groups=["Move"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovimentoBloco/Area2D"]
position = Vector2( -8.33331, 0 )
shape = SubResource( 2 )

[node name="Area2D2" type="Area2D" parent="MovimentoBloco" groups=["Move"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovimentoBloco/Area2D2"]
position = Vector2( 8.66669, 0 )
shape = SubResource( 3 )

[connection signal="area_entered" from="MovimentoBloco/Area2D" to="MovimentoBloco" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="MovimentoBloco/Area2D" to="MovimentoBloco" method="_on_Area2D_area_exited"]
[connection signal="area_entered" from="MovimentoBloco/Area2D2" to="MovimentoBloco" method="_on_Area2D2_area_entered"]
[connection signal="area_exited" from="MovimentoBloco/Area2D2" to="MovimentoBloco" method="_on_Area2D2_area_exited"]
